--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
   <title>Landing Page</title>
 </head>
 <body>
-  
+  <header>
+    <div class="container">
+      <a href="#">Header Logo</a>
+      <nav class="nav-list">
+        <ul>
+          <li><a href="#">header link one</a></li>
+          <li><a href="#">header link two</a></li>
+          <li><a href="#">header link three</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  </div>
 </body>
 </html>
