--- a/index.html
+++ b/index.html
@@ -20,6 +20,23 @@
       </nav>
     </div>
   </header>
+
+  <main>
+    <section>
+      <div class="container">
+        <div class="even-columns">
+          <div>
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <button class="button">Sign up</button>
+          </div>
+          <div>
+            <img src="" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
   </div>
 </body>
 </html>
