Create hero section

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
   <header>
-    <div class="container">
-      <a href="#">Header Logo</a>
+    <p id="logo">Header Logo</p>
       <nav class="nav-list">
         <ul>
           <li><a href="#">header link one</a></li>
@@ -18,25 +17,21 @@
           <li><a href="#">header link three</a></li>
         </ul>
       </nav>
-    </div>
   </header>
 
   <main>
-    <section>
-      <div class="container">
-        <div class="even-columns">
-          <div>
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-            <button class="button">Sign up</button>
-          </div>
-          <div>
-            <img src="" alt="">
-          </div>
-        </div>
+    <section class="hero">
+      <div class="left-col">
+        <h1>This website is awesome</h1>
+        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+        <button class="button">Sign up</button>
+      </div>
+      <div class="right-col">
+        <div class="image">
+          <p>this is a placeholder for an image</p>
+      </div>
       </div>
     </section>
   </main>
-  </div>
 </body>
 </html>
