--- a/index.html
+++ b/index.html
@@ -32,6 +32,28 @@
       </div>
       </div>
     </section>
+
+    <section class="info">
+      <h2>Some random information.</h2>
+      <div class="card-container">
+        <div class="card">
+          <div class="box"></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+          <div class="box"></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+          <div class="box"></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+          <div class="box"></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 </html>
