--- a/index.html
+++ b/index.html
@@ -61,6 +61,18 @@
         <p>-Thor, God of Thunder</p>
       </div>
     </section>
+
+    <section class="cta">
+      <div class="container">
+        <div class="left">
+          <strong>Call to action! It's time!</strong>
+        <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <div class="right">
+          <button class="button">Sign up</button>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 </html>
