--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
         </div>
       </div>
     </section>
+
+    <footer>
+      <p>Copyright &copy; The Odin Project 2023</p>
+    </footer>
   </main>
 </body>
 </html>
